| Summary: | ASTERISK-22291: ARI: /endpionts/{tech}/{id} channel list shouldn't have channel: prefixes | ||
| Reporter: | David M. Lee (dlee) | Labels: | |
| Date Opened: | 2013-08-12 16:25:33 | Date Closed: | 2013-08-21 11:10:01 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_ari |
| Versions: | Frequency of Occurrence | ||
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | When you hit up /endpoints/SIP/1004, it gives you a channel list as part of the data:
{code} { "technology": "SIP", "resource": "1004", "state": "online", "channel_ids": [ "channel:1376341790.3" ] } {code} The {{channel:}} was intended for use in cases where the id might be ambiguous (like when it might be a bridge or a channel). That's not the case here, so the {{channel:}} prefix should be dropped. | ||
| Comments: | |||